# crono_pci_linux

./: .gitignore  MakefileCommon.mk  README.md  crono_deps.cmake
include/: crono_driver.h  crono_kernel_interface.h  crono_linux_kernel.h  crono_userspace.h
src/: Makefile  crono_kernel_interface.cpp  crono_kernel_private.h  crono_linux_kernel.h  sysfs.cpp
tools/: CMakeLists.txt  build_linux.sh  conanfile.py  crono_deps.cmake  init_env.sh
tools/cmake/: CMakeLists.txt
tools/conan/: conanfile.py
tools/conan_utils/: CronoConanBase.py
userspace-src/: Makefile  crono_kernel_interface.cpp  crono_userspace.cpp  sysfs.cpp
